--- a/CellNetworkBuilder.ipynb
+++ b/CellNetworkBuilder.ipynb
@@ -619,7 +619,10 @@
     "\n",
     "import os \n",
     "if os.getenv('NEURON_HOME') == None:\n",
-    "    os.environ['NEURON_HOME'] = os.getenv('CONDA_PREFIX')\n",
+    "    if 'CONDA_PREFIX' in os.environ: \n",
+    "        os.environ['NEURON_HOME'] = os.getenv('CONDA_PREFIX')\n",
+    "    elif 'pythonLocation' in os.environ: \n",
+    "        os.environ['NEURON_HOME'] = os.getenv('pythonLocation')\n",
     "\n",
     "traces, events = generate_and_run(sim, \n",
     "                                  simulator='jNeuroML_NEURON', \n",
@@ -641,7 +644,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11c05f940>"
+       "<matplotlib.legend.Legend at 0x127fef820>"
       ]
      },
      "execution_count": 7,
